--- a/travel.css
+++ b/travel.css
@@ -1,7 +1,21 @@
+#plane-container {
+   position: relative;
+   width: 100%;
+   z-index: 3;
+   margin-top: -100px;
+ }
+ 
+ #plane {
+   position: relative;
+   top:120px;
+   left: -100px; /* Starting position */
+   transform: translateY(-50%);
+   transition: all 3s linear; /* Adjust duration as desired */
+ }
 
 .sidebar {
    position: absolute;
-   top: 50px;
+   top: 60px;
    left: -100px; /* Initially hidden off the left side */
    width: 200px;
    height: 100vh;
@@ -114,7 +128,7 @@ body{
           width: 114.91px;
           height: 34px;
           left: 118px;
-          top: 143px;
+          top: 153px;
           
 }
 .company-logo-image-1{
@@ -139,9 +153,9 @@ body{
 
 .company-pages{
           display: flex;
-          position: absolute;
-          top:124px;
-          right:149px;
+      position: relative;
+      top: 120px;
+      left:530px;
           z-index: 1;
 
 }
